--- a/index.html
+++ b/index.html
@@ -1,1 +1,142 @@
-你好好你妹好
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>支出管理</title>
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+</head>
+<body>
+  <div id="app">
+    <el-container>
+      <el-header>
+        <el-button type="primary" @click="showFormDialog">新增支出</el-button>
+		<div style="text-align: lift;margin-top: 20px;">
+          <span>贷款剩余金额：</span>
+          <span>{{ (300000 - totalAmount).toFixed(2) }}</span>
+        </div>
+      </el-header>
+      <el-main>
+        <el-table :data="expenses" border style="width: 100%">
+
+          <el-table-column prop="name" label="支出名称"></el-table-column>
+          <el-table-column prop="amount" label="支出金额"></el-table-column>
+		  
+		  		          <el-table-column label="操作">
+            <template slot-scope="scope">
+              <el-button type="danger" size="mini" @click="deleteExpense(scope.$index)">删除</el-button>
+            </template>
+          </el-table-column>
+
+
+        </el-table>
+        <div style="text-align: right; margin-top: 20px;">
+          <span>贷款使用金额：</span>
+          <span>{{ totalAmount }}</span>
+        </div>
+
+      </el-main>
+    </el-container>
+    <el-dialog title="新增支出" :visible.sync="formDialogVisible">
+      <el-form :model="form" ref="form" :rules="rules">
+        <el-form-item label="支出名称" prop="name">
+          <el-input v-model="form.name"></el-input>
+        </el-form-item>
+        <el-form-item label="支出金额" prop="amount">
+          <el-input-number v-model="form.amount" :min="0" :precision="2"></el-input-number>
+        </el-form-item>
+      </el-form>
+      <div slot="footer" class="dialog-footer">
+        <el-button @click="formDialogVisible = false">取消</el-button>
+        <el-button type="primary" @click="addExpense">确定</el-button>
+      </div>
+    </el-dialog>
+  </div>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.js"></script>
+  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script>
+    new Vue({
+      el: '#app',
+      data() {
+        return {
+          expenses: [], // 支出明细列表
+          formDialogVisible: false, // 新增支出弹窗是否可见
+          form: { // 新增支出表单数据
+            name: '',
+            amount: 0
+          },
+          rules: { // 新增支出表单验证规则
+            name: [
+              { required: true, message: '请输入支出名称', trigger: 'blur' }
+            ],
+            amount: [
+              { required: true, message: '请输入支出金额', trigger: 'blur' },
+              { type: 'number', message: '支出金额必须为数字', trigger: 'blur' },
+              { validator: this.validateAmount, trigger: 'blur' }
+            ]
+          }
+        }
+      },
+      computed: {
+        totalAmount() { // 计算总金额
+          return this.expenses.reduce((total, expense) => total + Number(expense.amount), 0.00).toFixed(2)
+        }
+	
+      },
+      methods: {
+        showFormDialog() { // 显示新增支出弹窗
+          this.formDialogVisible = true
+        },
+        addExpense() { // 新增支出
+          this.$refs.form.validate(valid => {
+            if (valid) {
+              const expense = {
+                id: this.expenses.length + 1,
+                name: this.form.name,
+                amount: this.form.amount.toFixed(2),
+                timestamp: new Date().toLocaleString()
+              }
+              this.expenses.push(expense)
+              this.updateTotalAmount()
+              this.saveExpenses()
+              this.formDialogVisible = false
+              this.$refs.form.resetFields()
+            }
+          })
+        },
+        deleteExpense(index) { // 删除支出
+          this.expenses.splice(index, 1)
+          this.updateTotalAmount()
+          this.saveExpenses()
+        },
+        updateTotalAmount() { // 更新总金额
+          const totalAmount = this.totalAmount
+          localStorage.setItem('totalAmount', totalAmount)
+        },
+        saveExpenses() { // 保存支出明细到缓存
+          const expenses = JSON.stringify(this.expenses)
+          localStorage.setItem('expenses', expenses)
+        },
+        validateAmount(rule, value, callback) { // 自定义验证支出金额规则
+          if (value <= 0) {
+            callback(new Error('支出金额必须大于0'))
+          } else if (value > this.totalAmount) {
+            callback(new Error('支出金额不能大于总金额'))
+          } else {
+            callback()
+          }
+        }
+      },
+      created() {
+        const expenses = localStorage.getItem('expenses')
+        if (expenses) {
+          this.expenses = JSON.parse(expenses)
+        }
+        const totalAmount = localStorage.getItem('totalAmount')
+        if (totalAmount) {
+          localStorage.setItem('totalAmount', totalAmount)
+        }
+      }
+    })
+  </script>
+</body>
+</html>
