--- a/index.html
+++ b/index.html
@@ -1,320 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>川海丰尚砂锅麻辣烫</title>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-</head>
-
-<body>
-    <div id="app">
-        <el-container>
-            <el-header>
-                <el-button type="primary" @click="showDialog">添加支出</el-button>
-
-                <el-date-picker v-model="value2" type="datetimerange" :picker-options="pickerOptions"
-                    @change="getchange" range-separator="至" start-placeholder="开始日期" end-placeholder="结束日期"
-                    align="right" format="yyyy-MM-dd">
-                </el-date-picker>
-
-                <el-button  @click="reset">重置</el-button>
-            </el-header>
-            <el-main>
-
-
-
-                <el-dialog :visible.sync="dialogVisible" title="川海丰尚砂锅麻辣烫-无锡城色佳园店 成本计算器">
-                    <el-form :model="form" ref="form" :rules="rules" label-width="80px">
-                        <el-form-item label="日期">
-                            <el-date-picker v-model="form.date" type="date" placeholder="选择日期"></el-date-picker>
-                        </el-form-item>
-                        <el-form-item label="营业额" prop="income">
-                            <el-input v-model="form.income"></el-input>
-                        </el-form-item>
-                        <el-form-item label="房租" prop="rent">
-                            <el-input v-model="form.rent" :placeholder="295" :disabled="true"></el-input>
-                        </el-form-item>
-                        <el-form-item label="贷款" prop="loan">
-                            <el-input v-model.number="form.loan" :placeholder="193" :disabled="true"></el-input>
-                        </el-form-item>
-                        <el-form-item label="水费" prop="water">
-                            <el-input v-model="form.water"></el-input>
-                        </el-form-item>
-                        <el-form-item label="电费" prop="electricity">
-                            <el-input v-model="form.electricity"></el-input>
-                        </el-form-item>
-                        <el-form-item label="饮料" prop="drinks">
-                            <el-input v-model="form.drinks"></el-input>
-                        </el-form-item>
-                        <el-form-item label="菜品" prop="dishes">
-                            <el-input v-model="form.dishes"></el-input>
-                        </el-form-item>
-                        <el-form-item label="工资" prop="salary">
-                            <el-input v-model="form.salary" :placeholder="150"></el-input>
-                        </el-form-item>
-                        <el-form-item label="其他" prop="other">
-                            <el-input v-model="form.other"></el-input>
-                        </el-form-item>
-                    </el-form>
-                    <div slot="footer" class="dialog-footer">
-                        <el-button @click="dialogVisible = false">取消</el-button>
-                        <el-button type="primary" @click="submitForm">提交</el-button>
-                    </div>
-                </el-dialog>
-                <el-table :data="tableData" border style="width: 100%">
-                    <el-table-column prop="date" label="日期"></el-table-column>
-                    <el-table-column prop="income" label="营业额"></el-table-column>
-                    <el-table-column prop="rent" width="250" label="房租（未参与实际支出）"></el-table-column>
-                    <el-table-column prop="loan" label="贷款"></el-table-column>
-                    <el-table-column prop="water" label="水费"></el-table-column>
-                    <el-table-column prop="electricity" label="电费"></el-table-column>
-                    <el-table-column prop="drinks" label="饮料"></el-table-column>
-                    <el-table-column prop="dishes" label="菜品"></el-table-column>
-                    <el-table-column prop="salary" label="工资"></el-table-column>
-                    <el-table-column prop="other" label="其他"></el-table-column>
-                    <el-table-column label="支出" :formatter="formatExpense"></el-table-column>
-                    <el-table-column label="利润" :formatter="formatProfit"></el-table-column>
-                    <el-table-column label="操作">
-                        <template slot-scope="scope">
-                            <el-link @click="editData(scope.row)">编辑</el-link>
-                            <el-link type="danger" @click="deleteData(scope.row)">删除</el-link>
-                        </template>
-                    </el-table-column>
-                </el-table>
-
-
-                <el-pagination background layout="prev, pager, next" :total="tableData.length">
-                </el-pagination>
-
-
-
-            </el-main>
-        </el-container>
-
-    </div>
-
-
-    <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.js"></script>
-    <!-- <script src="https://raw.githubusercontent.com/iu-yangkang/iu-cdnForYk/yangkang3.2/yangkang/yk.js"></script> -->
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
-    <script>
-        new Vue({
-            el: '#app',
-            data: {
-
-                pickerOptions: {
-                    shortcuts: [{
-                        text: '最近一周',
-                        onClick(picker) {
-                            const end = new Date();
-                            const start = new Date();
-                            start.setTime(start.getTime() - 3600 * 1000 * 24 * 7);
-                            picker.$emit('pick', [start, end]);
-                        }
-                    }, {
-                        text: '最近一个月',
-                        onClick(picker) {
-                            const end = new Date();
-                            const start = new Date();
-                            start.setTime(start.getTime() - 3600 * 1000 * 24 * 30);
-                            picker.$emit('pick', [start, end]);
-                        }
-                    }, {
-                        text: '最近三个月',
-                        onClick(picker) {
-                            const end = new Date();
-                            const start = new Date();
-                            start.setTime(start.getTime() - 3600 * 1000 * 24 * 90);
-                            picker.$emit('pick', [start, end]);
-                        }
-                    },
-                    {
-                        text: '最近一年',
-                        onClick(picker) {
-                            const end = new Date();
-                            const start = new Date();
-                            start.setTime(start.getTime() - 3600 * 1000 * 24 * 365);
-                            picker.$emit('pick', [start, end]);
-                        }
-                    }]
-                },
-                value1: [new Date(2000, 10, 10, 10, 10), new Date(2000, 10, 11, 10, 10)],
-                value2: '',
-
-
-
-
-                dialogVisible: false,
-                form: {
-                    date: new Date().toISOString().substr(0, 10),
-                    income: 0,
-                    rent: 295,
-                    loan: 193,
-                    water: 0,
-                    electricity: 0,
-                    drinks: 0,
-                    dishes: 0,
-                    salary: 150,
-                    other: 0
-                },
-                rules: {
-                    income: [
-                        { required: true, message: '请输入当日营业额', trigger: 'blur' }
-                    ]
-                },
-                tableData: JSON.parse(localStorage.getItem('tableData') || '[]'),
-                editIndex: -1
-            },
-            methods: {
-
-                reset(){
-                    this.tableData = JSON.parse(localStorage.getItem('tableData') || '[]')
-
-                },
-
-                getchange() {
-                    //    获取查询数据
-                    let start = this.value2[0].toLocaleDateString('zh-CN')
-                    let end = this.value2[1].toLocaleDateString('zh-CN')
-
-                    // console.log(this.tableData)
-
-
-                    console.log(this.filterData(start, end, this.tableData));
-
-                    // this.groupBy(this.tableData, ['date'], [], '-').then(res => {
-                    //     console.log(res)
-
-                    // })
-
-                    this.tableData = this.filterData(start, end, this.tableData)
-
-                },
-
-
-                /**
- * 分组函数，根据键或键数组对输入数组进行分组，并可计算值的总和。
- * @param {Array} array 要分组的数组
- * @param {string|Array} keys 用于分组的键，可以是单个键的字符串，也可以是多个键的数组
- * @param {Array} sumKeys 需要计算总和的键的数组，默认为空数组
- * @returns {Array} 返回包含所有分组结果的数组
- */
-                async groupBy(array, keys, sumKeys = [], join) {
-                    const grouped = {}; // 用于存储分组结果的对象
-                    for (const object of array) { // 遍历输入数组中的每个元素
-                        let key = ''; // 存储当前元素的键的变量
-                        if (Array.isArray(keys)) { // 如果传入的keys是数组
-                            for (const k of keys) { // 遍历keys数组
-                                key += object[k]; // 将每个键的值拼接起来作为当前元素的键
-                            }
-                        } else { // 如果传入的keys是单个键的字符串
-                            key = object[keys]; // 使用该键的值作为当前元素的键
-                        }
-                        if (!grouped.hasOwnProperty(key)) { // 如果当前键不存在于grouped对象中
-                            grouped[key] = { // 在grouped对象中新建一个以该键为名的属性
-                                values: [], // 存储属于该分组的所有元素
-                                group: key, // 当前分组的名称，用于作为返回结果中的一个属性
-                                total: 0, // 属于该分组的元素数量
-                                ...sumKeys.reduce((acc, curr) => ({ ...acc, [curr]: 0 }), {}), // 对需要计算总和的键进行初始化，设置初始值为0
-                            };
-                        }
-                        sumKeys.forEach((k) => { // 遍历需要计算总和的键
-                            if (object[k]) { // 如果当前元素包含该键
-                                grouped[key][k] += parseFloat(object[k]); // 将该键的值加到该分组对应的属性上
-                            }
-                        });
-                        grouped[key].total++; // 增加属于该分组的元素数量
-                        grouped[key].values.push(object); // 将当前元素添加到属于该分组的所有元素数组中
-                        grouped[key].group = keys ? keys.map(k => object[k]).join(join) : key; // 更新分组名称（如果keys是一个数组，使用每个键的值拼接而成）
-                    }
-                    return Object.values(grouped); // 返回所有分组结果的数组
-                },
-
-
-
-                filterData(startDate, endDate, jsonData) {
-                    const filteredData = [];
-                    const start = new Date(startDate);
-                    const end = new Date(endDate);
-                    for (const data of jsonData) {
-                        const date = new Date(data.date);
-                        if (date >= start && date <= end) {
-                            filteredData.push(data);
-                        }
-                    }
-                    // console.log(filteredData)
-                    return filteredData;
-                },
-
-
-
-
-
-                showDialog() {
-                    this.dialogVisible = true;
-                    this.editIndex = -1;
-                    this.$refs.form.resetFields();
-                },
-                submitForm() {
-                    this.$refs.form.validate(valid => {
-                        if (valid) {
-                            const data = Object.assign({}, this.form);
-                            data.date = new Date(data.date).toLocaleDateString();
-                            if (this.editIndex >= 0) {
-                                this.tableData.splice(this.editIndex, 1, data);
-                            } else {
-                                this.tableData.push(data);
-                            }
-                            localStorage.setItem('tableData', JSON.stringify(this.tableData));
-                            this.dialogVisible = false;
-                        }
-                    });
-                },
-                editData(row) {
-                    this.form = Object.assign({}, row);
-                    this.dialogVisible = true;
-                    this.editIndex = this.tableData.indexOf(row);
-                },
-                deleteData(row) {
-                    const index = this.tableData.indexOf(row);
-                    this.tableData.splice(index, 1);
-                    localStorage.setItem('tableData', JSON.stringify(this.tableData));
-                },
-                formatExpense(row) {
-                    const { rent, loan, water, electricity, drinks, dishes, salary, other } = row;
-                    let num =
-                        // parseFloat(rent) +
-                        parseFloat(loan) +
-                        parseFloat(water) +
-                        parseFloat(electricity) +
-                        parseFloat(drinks) +
-                        parseFloat(dishes) +
-                        parseFloat(salary) +
-                        parseFloat(other)
-                    //   console.log(num)
-                    return parseFloat(num).toFixed(2);
-
-                },
-                formatProfit(row) {
-                    const { income, rent, loan, water, electricity, drinks, dishes, salary, other } = row;
-
-                    //特殊处理逻辑，第一年不算房租的成本
-                    let num =
-                        parseFloat(income) -
-                        parseFloat(loan) -
-                        parseFloat(water) -
-                        parseFloat(electricity) -
-                        parseFloat(drinks) -
-                        parseFloat(dishes) -
-                        parseFloat(salary) -
-                        parseFloat(other);
-
-                    return parseFloat(num).toFixed(2);
-                }
-            }
-        });
-    </script>
-</body>
-
-</html>
+傻逼都去死吧
