--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
 傻逼都去死吧
+弟子规
+清朝·李毓秀
+dì
+zǐ
+guī
+弟子规，
+shèng
+rén
+xùn
+圣人训。
+shǒu
+xiào
+tì
+首孝悌，
+cì
+jǐn
+xìn
+次谨信。
+fàn
+ài
+zhòng
+泛爱众，
+ér
+qīn
+rén
+而亲仁。
+yǒu
+yú
+lì
+有余力，
+zé
+xué
+wén
+则学文。
+fù
+mǔ
+hū
+父母呼，
+yìng
+wù
+huǎn
+应勿缓。
+fù
+mǔ
+mìng
+父母命，
+xíng
+wù
+lǎn
+行勿懒。
+fù
+mǔ
+jiào
+父母教，
+xū
+jìng
+tīng
+须敬听。
+fù
+mǔ
+zé
+父母责，
+xū
+shùn
+chéng
+须顺承。
+dōng
+zé
+wēn
+冬则温， 
+xià
+zé
+qìng
+夏则凊。 
+chén
+zé
+xǐng
+晨则省， 
+hūn
+zé
+dìng
+昏则定。
+chū
+bì
+gù
+出必告， 
+fǎn
+bì
+miàn
+反必面。 
+jū
+yǒu
+cháng
+居有常， 
+yè
+wú
+biàn
+业无变。
+shì
+suī
+xiǎo
+事虽小， 
+wù
+shàn
+wéi
+勿擅为。 
+gǒu
+shàn
+wéi
+苟擅为， 
+zǐ
+dào
+kuī
+子道亏。
+wù
+suī
+xiǎo
+物虽小， 
+wù
+sī
+cáng
+勿私藏。 
+gǒu
+sī
+cáng
+苟私藏， 
+qīn
+xīn
+shāng
+亲心伤。
